day one patch no wrap fix

--- a/assets/styles/components/_hero-section.scss
+++ b/assets/styles/components/_hero-section.scss
@@ -20,6 +20,9 @@
     .text-6xl {
       line-height: 5rem;
     }
+    &--call {
+      white-space: nowrap;
+    }
   }
   &__description {
     line-height: 3rem;
@@ -61,6 +64,15 @@
     }
     &__bg-image-mob {
       display: block;
+    }
+  }
+}
+@media (max-width: 1280px) {
+  .wkode-hero-section {
+    &__main-title {
+      &--call {
+        white-space: normal;
+      }
     }
   }
 }
